Update backend to add login and registration logic
